# gllearn

./: .gitignore  CMakeLists.txt
Box2D/: CMakeLists.txt
algorithm/: CMakeLists.txt  CalNormalVector.cpp  Octree.h  OctreePoint.h  mainoctree.cpp  octree.cpp  pionttest.cpp  psimpl_test.cpp
assimpmodel/: AssimpLoad.cpp  AssimpLoad.h  AssimpLoader.cpp  AssimpLoader.h  AssimpModel.cpp  AssimpModel.h  CMakeLists.txt  ModelCamera.cpp  ModelCamera.h  ModelLoader.cpp  ModelLoader.h  ModelObject.cpp  ModelObject.h  ModelShader.cpp  ModelShader.h  ModelUtil.cpp  ModelUtil.h  TgaLoader.cpp  TgaLoader.h  TinyObjLoader.cpp  TinyObjLoader.h  assimpLoader.cpp  assimpLoader.h  glfwmodel.cpp  misc.cpp  misc.h  modelAssimp.cpp  modelAssimp.h  myGLCamera.cpp  myGLFunctions.cpp  myGLFunctions.h  myShader.cpp  myShader.h  simple.cpp  simple.h  tiny_obj_loader.cc  tiny_obj_loader.h
assimpmodel/data/: amenemhat.mtl  test.tga
assimpmodel/data/astroboy/: test.mtl
assimpmodel/data/shaders/: color.fs  color.vs  modelTextured.vsh
assimpmodel/libft/: ft_printf.h  get_next_line.h  libft2.h  libft3.h  read_arg.h
assimpmodel/libft/bonus/: ft_lstdelone.c
assimpmodel/libft/libft2/: Makefile  connect_server.c  create_server.c  ft_action.c  ft_action_bonus.c  ft_action_bonus2.c  ft_action_bonus3.c  ft_action_bonus4.c  ft_action_bonus5.c  ft_action_bonus6.c  ft_action_dp.c  ft_action_sc.c  ft_action_uxo.c  ft_atof.c  ft_atoi.c  ft_atoi_printf.c  ft_bzero.c  ft_close.c  ft_convert_base.c  ft_draw_line.c  ft_free.c  ft_freetab.c  ft_ftoa.c  ft_ftohex.c  ft_fwrite.c  ft_has_char.c  ft_has_char_rev.c  ft_image.c  ft_image2.c  ft_init_info.c  ft_is_lowercase.c  ft_is_uppercase.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isblk.c  ft_isdigit.c  ft_isnumber.c  ft_isprint.c  ft_isspace.c  (+106 more)
assimpmodel/libft/libft3/mem/: ft_memcpy.c
assimpmodel/libtga/: tga.c  tga.h  tga_display.c  tga_load_ogl.c  tga_save.c
freeImage/Source/: CMakeLists.txt  Plugin.h
freeImage/Source/FreeImage/: Plugin.cpp
freeImage/Source/LibJXR/jxrgluelib/: JXRGlue.h  JXRMeta.h
gltest/fogIsland/: CMakeLists.txt  Terrain.cpp  Texture2D.cpp  Water.cpp  main.cpp
gltest/shaders/: CMakeLists.txt
gltest/shaders/include/: fps.h  model.h  root_directory.h
gltest/shaders/src/: fps.cpp
gltest/shaders/src/advanced/advanced_lighting/: advanced_lighting.cpp
gltest/shaders/src/advanced/cubemaps_skybox/: cubemaps_skybox.cpp
gltest/shaders/src/advanced/rimshader/: normal_mapping.fs  normal_mapping.vs  rimshader.cpp
gltest/shaders/src/advanced/rimshader_normalize/: default.fs  default.vs  normal_visualization.gs  rimshader_normalize.cpp
gltest/shaders/src/advanced/stencil_testing/: 2.stencil_single_color.fs  2.stencil_testing.fs  2.stencil_testing.vs  stencil_testing.cpp
gltest/shaders/src/advanced/textures_vague/: blur.fs  blur.vs  texture.fs  texture_1.fs  textures.cpp
gltest/shaders/src/test1/00skeleton/: 00skeleton.cpp
gltest/shaders/src/test1/01shader_vbo1/: 01shader_vbo1.cpp
gltest/shaders/src/test1/01shader_vbo2/: 01shader_vbo2.cpp
gltest/shaders/src/test1/03texture/: 03texture.cpp
image_magick/: CMakeLists.txt  ImageMagick.spec  Makefile  common.shi  config.status  configure  libtool  magick.sh
image_magick/MagickCore/: ImageMagick.pc  MagickCore-config  MagickCore.pc  magick-baseconfig.h  version.h
image_magick/MagickWand/: MagickWand-config  MagickWand.pc
image_magick/PerlMagick/: Makefile.PL
image_magick/PerlMagick/default/: Makefile.PL
image_magick/PerlMagick/quantum/: Makefile.PL
image_magick/config/: ImageMagick.rdf  config.h  configure.xml  configure.xml.in
image_magick/tests/: drawtest.c
imagelib/: CMakeLists.txt
imagelib/cfile/: CDir.cpp  CDir.h  CDirFTW.cpp  CDirFTW.h  CFile.cpp  CFile.h  CFileBase.cpp  CFileBase.h  CFileDevice.cpp  CFileDevice.h  CFileParse.cpp  CFileParse.h  CFileType.h  COStreamFile.cpp  COStreamFile.h  CTempFile.cpp  CTempFile.h
imagelib/cmath/: CMathGen.h
imagelib/cos/: CHRTime.h  COSEnv.h  COSErr.cpp  COSErr.h  COSExec.cpp  COSExec.h  COSFile.cpp  COSFile.h  COSLimit.cpp  COSLimit.h  COSProcess.cpp  COSProcess.h  COSProfile.cpp  COSProfile.h  COSPty.cpp  COSPty.h  COSRand.cpp  COSRand.h  COSRead.cpp  COSRead.h  COSSignal.cpp  COSSignal.h  COSStrSignal.cpp  COSStrSignal.h  COSSystem.cpp  COSSystem.h  COSTerm.cpp  COSTerm.h  COSTime.cpp  COSTime.h  COSTimer.cpp  COSTimer.h  COSUser.cpp  COSUser.h  CSignalOpt.h  NaN.h  std_os.h
imagelib/cutil/: CRGBName.cpp  CRegExp.cpp
imagelib/fileutil/: CFile.cpp  CFile.h  CFileBase.cpp  CFileBase.h  CFileType.h  CFileUtil.cpp  CFileUtil.h  CImageFileUtil.cpp  CImageFileUtil.h  CSoundFileUtil.cpp  CSoundFileUtil.h  CTarDef.h  CTempFile.cpp  CTempFile.h  CTextFileUtil.cpp  CTextFileUtil.h
imagelib/include/: COptVal.h  CRGBUtil.h
imagelib/src/: CAlignType.h  CFile.cpp  CFile.h  CFileType.cpp  CFileType.h  CFileUtil.cpp  CFileUtil.h  CIBBox2D.cpp  CIBBox2D.h  CISize2D.cpp  CISize2D.h  CImage.h  CImageJPG.cpp  CImageLibI.h  CImageMgr.h  CImagePNG.cpp  CImageTGA.cpp  CMathGen.h  COptVal.cpp  COptVal.h  CRGBA.cpp  CRGBA.h  CRGBACombineDef.cpp  CRGBACombineDef.h  CRefPtr.h  CStrUtil.cpp  CStrUtil.h  CTempFile.cpp  CTempFile.h
imagelib/strutil/: CStrUtil.h
imagelib/test/: CImageColorReplace.cpp  CImageConvert.cpp
imgprocess/: CMakeLists.txt  Jpeg.cpp  Jpeg.h  codec_jpeg.cpp  imgmain.cpp  jpgexample.cpp  jpgrw.cpp  jpgrw.h  pic_process.cpp  pic_process.h  pngexample.cpp  pngrw.cpp  pngrw.h
libxml2/: CMakeLists.txt  Makefile  config.h  config.status  libtool  libxml-2.0-uninstalled.pc  libxml-2.0.pc  libxml2.spec  trio.c  xml2-config
libxml2/doc/: Makefile
libxml2/doc/devhelp/: Makefile
libxml2/doc/examples/: Makefile
libxml2/example/: Makefile
libxml2/include/: Makefile
libxml2/include/libxml/: Makefile  xmlversion.h
libxml2/python/: Makefile
libxml2/python/tests/: Makefile
libxml2/xstc/: Makefile
shadertest/: CMakeLists.txt
shadertest/common/: camera.h  mesh.h  model.h  root_directory.h
shadertest/lighting/: advanced_lighting.cpp
utm/: CMakeLists.txt  test_geo_to_utm.cpp  test_utm_to_geo.cpp
(+103 files in other folders)
