cmake_minimum_required(VERSION 3.4.1)
project(gllearn LANGUAGES CXX C)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wno-narrowing -fexceptions")

add_subdirectory(algorithm)
add_subdirectory(glew)
add_subdirectory(glfw)
add_subdirectory(gli)
#add_subdirectory(BLPConverter)
#add_subdirectory(freeImage)
#add_subdirectory(freetypegl)
#add_subdirectory(opencv)
add_subdirectory(assimp)
add_subdirectory(assimpmodel)
#add_subdirectory(imagelib)
#add_subdirectory(imgprocess)
add_subdirectory(kazmath)
#add_subdirectory(mozjpeg)
#add_subdirectory(tinygltf)
#add_subdirectory(tinyobj)
#add_subdirectory(proj4)
#add_subdirectory(spirv_tools)
#add_subdirectory(utm)
#add_subdirectory(zpng)
