cmake_minimum_required(VERSION 3.4.1)
project(gllearn LANGUAGES CXX C)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wno-narrowing -fexceptions")

#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

#add_subdirectory(astc_codec)
#add_subdirectory(astc_encoder)
#add_subdirectory(cocos2dx)
#add_subdirectory(etc2comp)
#add_subdirectory(opencv)
#add_subdirectory(algorithm)
#add_subdirectory(assimp)
#add_subdirectory(glew)
#add_subdirectory(glfw)
#add_subdirectory(gli)
#add_subdirectory(glm/glm)
#add_subdirectory(bzip2)
#add_subdirectory(Box2D)
#add_subdirectory(bullet3)
#add_subdirectory(BLPConverter)
#add_subdirectory(freeImage)
#add_subdirectory(harfbuzz)
#add_subdirectory(freetype)
#add_subdirectory(freetypegl)
#add_subdirectory(gltest)
#add_subdirectory(assimpmodel)
#add_subdirectory(gamekit)
#add_subdirectory(imagelib)
#add_subdirectory(libxml2)
#add_subdirectory(image_magick)
#add_subdirectory(imgprocess)
#add_subdirectory(kazmath)
#add_subdirectory(mozjpeg)
#add_subdirectory(tinygltf)
#add_subdirectory(tinyobj)
#add_subdirectory(proj4)
add_subdirectory(SDL2)
#add_subdirectory(shadertest)
#add_subdirectory(spirv_tools)
#add_subdirectory(Urho3D)
#add_subdirectory(utm)
#add_subdirectory(zpng)
