add_executable(utm_general
        test_general.cpp
        datum.cpp
        utm.cpp
       )


add_executable(utm_geo_to_utm
        test_geo_to_utm.cpp
        datum.cpp
        utm.cpp
        )


add_executable(utm_utm_to_geo
        test_utm_to_geo.cpp
        datum.cpp
        utm.cpp
        )